<resources>
    <string name="app_name">AdMotors</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="manufacturers">Manufacturer</string>
    <string name="error_connect_server">Error connecting server</string>
    <string name="internet_not_connect">Internet Not Connected</string>
    <string name="model">Model</string>
    <string name="not_set">Not set</string>
    <string name="price">Price</string>
    <string name="body_type">Body type</string>
    <string name="minimum">Minimum</string>
    <string name="fuel_type">Fuel type</string>
    <string name="condition">Condition</string>
    <string name="year">Year</string>
    <string name="transmission">Transmission</string>
    <string name="body_color">Body color</string>
    <string name="mileage">Mileage</string>
    <string name="maximum">Maximum</string>
    <string name="search">Search</string>
    <string name="advance_filter">Advanced filter</string>
    <string name="seat_number">Seat number</string>
    <string name="door_number">Door number</string>
    <string name="equipment">Equipments</string>
    <string name="power">Power</string>
    <string name="previous_users">Previous Owners</string>
    <string name="city">City</string>
    <string name="any">Any</string>
    <string name="used">Used</string>
    <string name="news">New</string>
    <string name="camera360">360 Camera</string>
    <string name="frag_category">Filtered Ads</string>
    <string name="price_min">Price min</string>
    <string name="price_max">Price max</string>
    <string name="power_min">Power min</string>
    <string name="power_max">Power max</string>
    <string name="mileage_min">mileage_min</string>
    <string name="mileage_max">Mileage max</string>
    <string name="sort">Sort</string>
    <string name="adsItem">Ads Item</string>
    <string name="carItem">Car Item</string>
    <string name="detailFragment">Ads Detail</string>
    <string name="gears">Gears</string>
    <string name="cylinder">Cylinder</string>
    <string name="weight">Car weight</string>
    <string name="fuel_consump">Fuel consumption</string>
    <string name="co2emission">CO<sub><small>2</small></sub> emissions</string>
    <string name="description">Description</string>
    <string name="seller_contact">Seller contact</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="dialog">Dialog</string>
    <string name="ads">Ads</string>
    <string name="reload_frag_listener">Reload fragment listener</string>
    <string name="welcome">Welcome</string>
    <string name="signin_to_continue">Sign In to continue</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="forgot_pass">Forgot Your Password?</string>
    <string name="dnt_have_acc">Dont have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="user_name">Username</string>
    <string name="cannot_empty">Field cannot be empty</string>
    <string name="passdontcontainspace">Password can not contains space</string>
    <string name="usernamecontainspace">Username can not contains space</string>
    <string name="selling">Selling</string>
    <string name="engine_power">Engine size</string>
    <string name="manufacturers_rq">Manufacturers (required)</string>
    <string name="required">(Required)</string>
    <string name="option">(Optional)</string>
    <string name="car_name">Car name</string>
    <string name="tv_images">Images</string>
    <string name="address">Address</string>
    <string name="frag_postads">Post Ads</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="array_selling_empty">It looks like you\'ve not had any ads yet\nCreate your first ads</string>
    <string name="frag_favourite">My Favourites</string>
    <string name="favourite_list_empty">It looks like you have\'ve not liked any ads yet</string>
    <string name="full_name">Full name</string>
    <string name="fill_all_info">Please fill all infomation</string>
    <string name="emailcontainspace">Email can not contains space</string>
    <string name="invalid_email">Email is invalid</string>
    <string name="reset_password">Reset password</string>
    <string name="fill_email">Please fill your email</string>
    <string name="frag_mesage">Messages</string>
    <string name="frag_chat">FragmentChat</string>
    <string name="chatlist_empty">You don\'t have any recent contact</string>
    <string name="frag_profile">Profile</string>
    <string name="ads_list_empty">This user don\'t have any ads!</string>
    <string name="frag_edituser">User Editing</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="recent">Recent Ads</string>
    <string name="frag_viewmore">FragmentViewMore</string>
    <string name="frag_setting">Settings</string>
    <string name="intro">Connect with our community</string>
    <string name="your_location">Your location</string>
    <string name="car_edition">Car Edition</string>
    <string name="search_text">Search Text</string>
    <string name="contact_us">Contact Us</string>
    <string name="submit">Submit</string>
    <string name="message">Message</string>
    <string name="frag_contact">Contact Us</string>
    <string name="sent_contact_success">Your message has been sent!</string>
    <string name="unauthorized_access">Unauthorized Access</string>
    <string name="tv_video">Car video</string>
</resources>