<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SearchFragment"
    android:background="@color/gray">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/manufacturers"
                    android:textSize="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_search_manu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="15dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:elevation="10dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_search_manu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_set"
                            android:layout_marginLeft="10dp"
                            android:textSize="16dp"
                            android:layout_centerVertical="true"/>
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/drop_down_ic"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/model"
                    android:textSize="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_search_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="15dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:elevation="10dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_search_model"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_set"
                            android:layout_marginLeft="10dp"
                            android:textSize="16dp"
                            android:layout_centerVertical="true"/>
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/drop_down_ic"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/price"
                    android:textSize="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_search_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="15dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:elevation="10dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_search_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_set"
                            android:layout_marginLeft="10dp"
                            android:textSize="16dp"
                            android:layout_centerVertical="true"/>
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/drop_down_ic"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/body_type"
                    android:textSize="18dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"/>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_search_bodytype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="5dp"
                    android:layout_margin="15dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:elevation="10dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tv_search_bodytype"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_set"
                            android:layout_marginLeft="10dp"
                            android:textSize="16dp"
                            android:layout_centerVertical="true"/>
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/drop_down_ic"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>